# algorithm

./: CMakeLists.txt  README.md  main.c
include/: debug.h  typedef.h
include/common/: debug.h  errorcode.h
include/init/string/: max_subsequence_sum.h
src/: CMakeLists.txt  main.c
src/common/: CMakeLists.txt  debug.c
src/init/stack/: calculate.h  stack.h
src/init/string/: sunday.h
src/stack/: CMakeLists.txt  calculate.c  stack.c  stack.h
src/string/: CMakeLists.txt  max_subsequence_sum.c  sunday.c  t.txt
