INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/src/init/string ${PROJECT_SOURCE_DIR}/src/init/stack ${PROJECT_SOURCE_DIR}/src/stack)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src  ROOT)

ADD_SUBDIRECTORY(./common)
ADD_SUBDIRECTORY(./string)
ADD_SUBDIRECTORY(./stack)

ADD_EXECUTABLE(main  ${ROOT})

TARGET_LINK_LIBRARIES(main Mystack Mystring api)

TARGET_INCLUDE_DIRECTORIES(main PUBLIC ${PROJECT_SOURCE_DIR}/include)






